[project]
name = "llm-human-twin"
version = "0.1.0"
description = ""
authors = [
    {name = "RohitPawar001",email = "rppawar491@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "zenml (>=0.80.1,<0.81.0)"
]

[tool.poetry]
packages = [{include = "llm_human_twin", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
